# RecipeSmith

./: Cargo.toml  README.md  mod.rs
recipe-list/: recipes.CSV  recipes.Json
recipes/: recipes.Json
src/: lib.rs
