[package]
name = "recipeSmith"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
# Or use csv if you're using CSV format
# csv = "1.1"

[[bin]]
name = "recipieSmith"
path = "src/lib.rs"
