[package]
name = "recipesmith"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
async-std = { version = "1.10", features = ["attributes"] }


[features]
default = ["full"]
futures = "0.3"

[dependencies.skillscript]
# Uncomment this communication dependency when SkillsScript submodule is implemented
# git = "https://github.com/gamedev44/skillscript"
